--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js" integrity="sha512-b/htz6gIyFi3dwSoZ0Uv3cuv3Ony7EeKkacgrcVg8CMzu90n777qveu0PBcbZUA7TzyENGtU+qZRuFAkfqgyoQ==" crossorigin="anonymous"></script>
     <script src="./world.js" defer></script>
+    <!-- <script src="./assets/Grass.png"></script>
+    <script src="./assets/Road.png"></script>
+    <script src="./assets/Water.png"></script> -->
   </head>
   <body>
     <div id="container"></div>
