--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Dungeon Explorer</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
 
-  </head>
-  <body>
-    <main>
-    </main>
-    <script src="./src/world.js" defer></script>
+<head>
+  <title>Dungeon Explorer</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
- 
-  </body>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
+
+</head>
+
+<body>
+  <main>
+  </main>
+
+  <script src="./src/BSP_helper.js"></script>
+  <script src="./src/functions.js"></script>
+  <script src="./src/init.js"></script>
+
+  <script src="./src/world.js"></script>
+
+</body>
+
 </html>
