--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <script src="./src/functions.js"></script>
   <script src="./src/init.js"></script>
 
-  <script src="./src/world.js"></script>
+  <script src="./src/main.js"></script>
 
 </body>
 
