--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="./src/BSP_helper.js"></script>
   <script src="./src/functions.js"></script>
   <script src="./src/init.js"></script>
+  <script src="./src/objects.js"></script>
   <script src="./src/main.js"></script>
 
 </body>
