--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <script src="./src/init.js"></script>
   <script src="./src/objects.js"></script>
   <script src="./src/main.js"></script>
+  <script src="./src/draw.js"></script>
 
 </body>
 
